@@ -93,6 +93,11 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public StudentProfileDTO createStudent(CreateStudentRequest request) {
+        final String method = "createStudent";
+        long startNs = System.nanoTime();
+        String traceId = TraceUtil.getTraceId();
+        log.info("[{}] enter traceId={} requestRole={} email={}", method, traceId, request.getRoleName(), request.getEmail());
+
         appValidator.validateEnumValue(Gender.class, request.getGender());
         DataUtil.validateDateOfBirth(request.getDateOfBirth());
         appValidator.validateAllowedEnumValue(
@@ -124,12 +129,18 @@ public class UserServiceImpl implements UserService {
         String password = DataUtil.generateRandomPassword(8);
         accountService.createAccountForExistUser(user, username, password);
 
+        long durationMs = (System.nanoTime() - startNs) / 1_000_000;
+        log.info("[{}] exit traceId={} createdUserId={} durationMs={}", method, traceId, user.getId(), durationMs);
         return mapToStudentProfileDTO(user);
     }
 
     @Override
     @Transactional
     public StudentProfileDTO updateStudent(Long userId, UpdateStudentRequest request) {
+        final String method = "updateStudent";
+        long startNs = System.nanoTime();
+        String traceId = TraceUtil.getTraceId();
+        log.info("[{}] enter traceId={} userId={}", method, traceId, userId);
 
         appValidator.validateEnumValue(Gender.class, request.getGender());
 
@@ -180,12 +191,19 @@ public class UserServiceImpl implements UserService {
 
         userRepository.save(user);
 
+        long durationMs = (System.nanoTime() - startNs) / 1_000_000;
+        log.info("[{}] exit traceId={} userId={} durationMs={}", method, traceId, userId, durationMs);
         return mapToStudentProfileDTO(user);
     }
 
     @Override
     @Transactional
     public StudentProfileDTO updateStudentStatus(Long userId, UserStatus newStatus) {
+        final String method = "updateStudentStatus";
+        long startNs = System.nanoTime();
+        String traceId = TraceUtil.getTraceId();
+        log.info("[{}] enter traceId={} userId={} newStatus={}", method, traceId, userId, newStatus);
+
         User user = userRepository.findByIdAndDeletedAtIsNull(userId)
                 .orElseThrow(() -> new ApiException(Const.USER.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
 
@@ -195,7 +213,7 @@ public class UserServiceImpl implements UserService {
                 Set.of(RoleName.STUDENT, RoleName.TEST_TAKER)
         );
         UserStatus oldStatus = user.getStatus();
-        // Quy tắc trạng thái
+
         if (UserStatus.PENDING.equals(oldStatus)) {
             throw new ApiException(Const.ACCOUNT.CANNOT_CHANGE_STATUS_TO_ACTIVE_MANUALLY, HttpStatus.FORBIDDEN.value());
         }
@@ -205,12 +223,18 @@ public class UserServiceImpl implements UserService {
         user.setStatus(newStatus);
         userRepository.save(user);
 
+        long durationMs = (System.nanoTime() - startNs) / 1_000_000;
+        log.info("[{}] exit traceId={} userId={} durationMs={}", method, traceId, userId, durationMs);
         return mapToStudentProfileDTO(user);
     }
 
     @Override
     public DataResponse<List<StudentProfileDTO>> getStudentList(int page, int size, String searchText, List<String> status, List<String> roleName, String sortBy, String sortDir) {
-        // Validate pagination and sort parameters
+        final String method = "getStudentList";
+        long startNs = System.nanoTime();
+        String traceId = TraceUtil.getTraceId();
+        log.info("[{}] enter traceId={} page={} size={} searchText={}", method, traceId, page, size, searchText);
+
         appValidator.validatePaginationParams(page, size);
         appValidator.validateSortParams(List.of("createdAt", "userName", "email", "fullName", "status"), sortBy, sortDir);
 
@@ -240,6 +264,8 @@ public class UserServiceImpl implements UserService {
                 .map(this::mapToStudentProfileDTO)
                 .collect(Collectors.toList());
 
+        long durationMs = (System.nanoTime() - startNs) / 1_000_000;
+        log.info("[{}] exit traceId={} page={} size={} durationMs={}", method, traceId, page, size, durationMs);
         return DataResponse.<List<StudentProfileDTO>>builder()
                 .traceId(TraceUtil.getTraceId())
                 .success(true)
@@ -505,6 +531,11 @@ public class UserServiceImpl implements UserService {
     @Override
     @Transactional
     public void requestChangeEmail(Long userId, ChangeEmailRequest request) {
+        final String method = "requestChangeEmail";
+        long startNs = System.nanoTime();
+        String traceId = TraceUtil.getTraceId();
+        log.info("[{}] enter traceId={} userId={} newEmail={}", method, traceId, userId, request.getNewEmail());
+
         String username = jwtUtil.extractUsernameFromCurrentRequest();
         if (username == null || username.trim().isEmpty()) {
             throw new ApiException(Const.AUTH.INVALID_TOKEN_USERNAME, HttpStatus.UNAUTHORIZED.value());
@@ -513,7 +544,6 @@ public class UserServiceImpl implements UserService {
         User currentUser = userRepository.findByUserNameAndDeletedAtIsNull(username)
                 .orElseThrow(() -> new ApiException(Const.USER.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
 
-        // Lấy user mục tiêu dựa trên userId được truyền vào
         User targetUser = userRepository.findByIdAndDeletedAtIsNull(userId)
                 .orElseThrow(() -> new ApiException(Const.USER.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
 
@@ -521,39 +551,24 @@ public class UserServiceImpl implements UserService {
         RoleName currentRole = currentUser.getRole().getName();
         RoleName targetRole = targetUser.getRole().getName();
 
-        // --- Validate quyền đổi email ---
         if (!isSelf) {
-            // Chỉ một số role nhất định được đổi email người khác
             if (!List.of(RoleName.TEACHER, RoleName.TEACHING_ASSISTANT, RoleName.MANAGER).contains(currentRole)) {
                 throw new ApiException(Const.SECURITY.FORBIDDEN_ROLE, HttpStatus.FORBIDDEN.value());
             }
 
-            // Chỉ được đổi cho các role này
             if (!List.of(RoleName.STUDENT, RoleName.TEST_TAKER, RoleName.TEACHER, RoleName.TEACHING_ASSISTANT).contains(targetRole)) {
                 throw new ApiException(Const.SECURITY.FORBIDDEN_ROLE, HttpStatus.FORBIDDEN.value());
             }
 
-            // 🎯 Validate riêng theo role của người thực hiện
             if (currentRole == RoleName.MANAGER) {
-                // Manager chỉ được đổi email cho TEACHER/ASSISTANT ở trạng thái PENDING
                 if (List.of(RoleName.TEACHER, RoleName.TEACHING_ASSISTANT).contains(targetRole) && (targetUser.getStatus() != UserStatus.PENDING)) {
-                        throw new ApiException(
-                                "Manager chỉ được đổi email cho TEACHER/TEACHING_ASSISTANT ở trạng thái PENDING",
-                                HttpStatus.FORBIDDEN.value()
-                        );
-
+                    throw new ApiException(Const.EMAIL_CHANGE.MANAGER_ONLY_PENDING_TEACHERS, HttpStatus.FORBIDDEN.value());
                 }
-                // Manager có thể đổi email cho STUDENT/TEST_TAKER bất kỳ trạng thái nào
-            } else if (currentRole == RoleName.TEACHER || currentRole == RoleName.TEACHING_ASSISTANT && (!List.of(RoleName.STUDENT, RoleName.TEST_TAKER).contains(targetRole))) {
-                    throw new ApiException(
-                            "TEACHER/TEACHING_ASSISTANT chỉ được đổi email cho STUDENT/TEST_TAKER",
-                            HttpStatus.FORBIDDEN.value()
-                    );
-
+            } else if ((currentRole == RoleName.TEACHER || currentRole == RoleName.TEACHING_ASSISTANT) && (!List.of(RoleName.STUDENT, RoleName.TEST_TAKER).contains(targetRole))) {
+                throw new ApiException(Const.EMAIL_CHANGE.TEACHER_ONLY_STUDENTS, HttpStatus.FORBIDDEN.value());
             }
         }
 
-        // Validate trạng thái user trước khi xử lý
         if (targetUser.getStatus() == UserStatus.INACTIVE) {
             throw new ApiException(Const.USER.USER_INACTIVE, HttpStatus.BAD_REQUEST.value());
         }
@@ -561,7 +576,7 @@ public class UserServiceImpl implements UserService {
         String newEmail = request.getNewEmail();
 
         if (targetUser.getStatus() == UserStatus.ACTIVE && newEmail.equalsIgnoreCase(targetUser.getEmail())) {
-            throw new ApiException("Email mới không được trùng với email hiện tại khi user đang ACTIVE", HttpStatus.BAD_REQUEST.value());
+            throw new ApiException(Const.EMAIL_CHANGE.NEW_EMAIL_SAME_AS_CURRENT_WHEN_ACTIVE, HttpStatus.BAD_REQUEST.value());
         }
 
         targetUser.setChangeEmailTokenUsed(false);
@@ -583,12 +598,19 @@ public class UserServiceImpl implements UserService {
             default:
                 throw new ApiException(Const.USER.USER_INACTIVE, HttpStatus.BAD_REQUEST.value());
         }
-    }
 
+        long durationMs = (System.nanoTime() - startNs) / 1_000_000;
+        log.info("[{}] exit traceId={} userId={} durationMs={}", method, traceId, userId, durationMs);
+    }
 
     @Override
     @Transactional
     public UserProfileDTO confirmChangeEmail(String token) {
+        final String method = "confirmChangeEmail";
+        long startNs = System.nanoTime();
+        String traceId = TraceUtil.getTraceId();
+        log.info("[{}] enter traceId={} tokenPresent={}", method, traceId, token != null && !token.isBlank());
+
         EmailChangeTokenClaims claims = jwtUtil.validateEmailChangeToken(token);
         Long userId = claims.getUserId();
         String newEmail = claims.getNewEmail();
@@ -597,11 +619,14 @@ public class UserServiceImpl implements UserService {
                 .orElseThrow(() -> new ApiException(Const.USER.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
 
         if(user.isChangeEmailTokenUsed()){
-            throw new ApiException("The link change email has already been used.", HttpStatus.BAD_REQUEST.value());
+            throw new ApiException(Const.EMAIL_CHANGE.CHANGE_LINK_ALREADY_USED, HttpStatus.BAD_REQUEST.value());
         }
         user.setChangeEmailTokenUsed(true);
         user.setEmail(newEmail);
         userRepository.save(user);
+
+        long durationMs = (System.nanoTime() - startNs) / 1_000_000;
+        log.info("[{}] exit traceId={} userId={} durationMs={}", method, traceId, userId, durationMs);
 
         RoleName roleName = user.getRole().getName();
         if (List.of(RoleName.STUDENT, RoleName.TEST_TAKER).contains(roleName)) {
@@ -617,41 +642,85 @@ public class UserServiceImpl implements UserService {
     @Override
     @Transactional
     public void importStudentsFromExcel(MultipartFile file) {
+        final String method = "importStudentsFromExcel";
+        long startNs = System.nanoTime();
+        String traceId = TraceUtil.getTraceId();
+        log.info("[{}] enter traceId={} filePresent={}", method, traceId, file != null && !file.isEmpty());
+
         List<ImportStudentDTO> importList = fileService.readExcelData(file, "Import Data", ImportStudentDTO.class);
-        for (ImportStudentDTO record : importList) {
-            // Kiểm tra các trường bắt buộc
+
+        String firstError = null;
+
+        // Validate toàn bộ file trước
+        for (int i = 0; i < importList.size(); i++) {
+            int row = i + 2;
+            ImportStudentDTO record = importList.get(i);
+
+            // Email
             if (record.getEmail() == null || record.getEmail().isBlank()) {
-                throw new ApiException("Email is required.", HttpStatus.BAD_REQUEST.value());
+                firstError = String.format(Const.IMPORT_STUDENT.ROW_EMAIL_REQUIRED, row);
+                break;
             }
             if (!Pattern.matches(Const.VALIDATE_INPUT.regexEmail, record.getEmail())) {
-                throw new ApiException("Invalid email format: " + record.getEmail(), HttpStatus.BAD_REQUEST.value());
-            }
-            if (record.getFullName() == null || record.getFullName().trim().isEmpty()) {
-                throw new ApiException("Full name is required", HttpStatus.BAD_REQUEST.value());
-            }
-            if (!EnumUtil.isAllowedEnumValue(RoleName.class, record.getRoleName(), Set.of(RoleName.STUDENT, RoleName.TEST_TAKER))) {
-                throw new ApiException("Invalid role name: " + record.getRoleName(), HttpStatus.BAD_REQUEST.value());
-            }
-            // Kiểm tra các trường tùy chọn
-            if (record.getPhoneNumber() != null && !DataUtil.isValidPhoneNumber(record.getPhoneNumber())) {
-                throw new ApiException("Invalid phone number format: " + record.getPhoneNumber(), HttpStatus.BAD_REQUEST.value());
-            }
-            if (record.getGender() != null && !EnumUtil.isValidEnum(Gender.class, record.getGender())) {
-                throw new ApiException("Invalid gender format: " + record.getGender(), HttpStatus.BAD_REQUEST.value());
-            }
-            if (record.getParentEmail() != null && !record.getParentEmail().isEmpty() &&
-                    !Pattern.matches(Const.VALIDATE_INPUT.regexEmail, record.getParentEmail())) {
-                throw new ApiException("Invalid parent email format: " + record.getParentEmail(), HttpStatus.BAD_REQUEST.value());
+                firstError = String.format(Const.IMPORT_STUDENT.ROW_INVALID_EMAIL, row, record.getEmail());
+                break;
             }
 
+            // Full name
+            if (record.getFullName() == null || record.getFullName().trim().isEmpty()) {
+                firstError = String.format(Const.IMPORT_STUDENT.ROW_FULL_NAME_REQUIRED, row);
+                break;
+            }
+
+            // Role
+            if (!EnumUtil.isAllowedEnumValue(RoleName.class, record.getRoleName(),
+                    Set.of(RoleName.STUDENT, RoleName.TEST_TAKER))) {
+                firstError = String.format(Const.IMPORT_STUDENT.ROW_INVALID_ROLE, row, record.getRoleName());
+                break;
+            }
+
+            // Phone (optional)
+            if (record.getPhoneNumber() != null &&
+                    !DataUtil.isValidPhoneNumber(record.getPhoneNumber())) {
+                firstError = String.format(Const.IMPORT_STUDENT.ROW_INVALID_PHONE, row, record.getPhoneNumber());
+                break;
+            }
+
+            // Gender (optional)
+            if (record.getGender() != null &&
+                    !EnumUtil.isValidEnum(Gender.class, record.getGender())) {
+                firstError = String.format(Const.IMPORT_STUDENT.ROW_INVALID_GENDER, row, record.getGender());
+                break;
+            }
+
+            // Parent email (optional)
+            if (record.getParentEmail() != null && !record.getParentEmail().isEmpty() &&
+                    !Pattern.matches(Const.VALIDATE_INPUT.regexEmail, record.getParentEmail())) {
+                firstError = String.format(Const.IMPORT_STUDENT.ROW_INVALID_PARENT_EMAIL, row, record.getParentEmail());
+                break;
+            }
+
+            // Level
+            if (record.getLevelCode() != null && !record.getLevelCode().isBlank()) {
+                boolean levelExists = levelRepository.findByLevelCodeIgnoreCase(record.getLevelCode()).isPresent();
+                if (!levelExists) {
+                    firstError = String.format(Const.IMPORT_STUDENT.ROW_LEVEL_NOT_FOUND, row, record.getLevelCode());
+                    break;
+                }
+            }
+        }
+
+        // Nếu có lỗi → dừng import
+        if (firstError != null) {
+            log.error("[{}] traceId={} import validation failed: {}", method, traceId, firstError);
+            throw new ApiException(firstError, HttpStatus.BAD_REQUEST.value());
+        }
+
+        // Không có lỗi → bắt đầu import
+        for (ImportStudentDTO record : importList) {
             Long levelId = null;
             if (record.getLevelCode() != null && !record.getLevelCode().isBlank()) {
-                Level level = levelRepository.findByLevelCodeIgnoreCase(record.getLevelCode())
-                        .orElseThrow(() -> new ApiException(
-                                "Level not found with code: " + record.getLevelCode(),
-                                HttpStatus.NOT_FOUND.value()
-                        ));
-                levelId = level.getId();
+                levelId = levelRepository.findByLevelCodeIgnoreCase(record.getLevelCode()).get().getId();
             }
 
             CreateStudentRequest request = CreateStudentRequest.builder()
@@ -665,81 +734,98 @@ public class UserServiceImpl implements UserService {
                     .gender(record.getGender())
                     .levelId(levelId)
                     .build();
+
             if (record.getParentEmail() != null && !record.getParentEmail().isEmpty()) {
-                ParentInfo parentInfo = new ParentInfo();
-                parentInfo.setParentEmail(record.getParentEmail());
-                parentInfo.setParentName(record.getParentName());
-                parentInfo.setParentPhone(record.getParentPhone());
-                parentInfo.setRelationship(record.getRelationship());
-                request.setParentInfo(parentInfo);
+                ParentInfo parent = new ParentInfo();
+                parent.setParentEmail(record.getParentEmail());
+                parent.setParentName(record.getParentName());
+                parent.setParentPhone(record.getParentPhone());
+                parent.setRelationship(record.getRelationship());
+                request.setParentInfo(parent);
             }
+
             createStudent(request);
         }
+
+        long durationMs = (System.nanoTime() - startNs) / 1_000_000;
+        log.info("[{}] exit traceId={} importedRows={} durationMs={}", method, traceId, importList.size(), durationMs);
     }
+
 
     @Override
     @Transactional
     public void importTeachersFromExcel(MultipartFile file) {
-        List<ImportTeacherDTO> importList = fileService.readExcelData(file, "Import Data", ImportTeacherDTO.class);
+        final String method = "importTeachersFromExcel";
+        long startNs = System.nanoTime();
+        String traceId = TraceUtil.getTraceId();
+        log.info("[{}] enter traceId={} filePresent={}", method, traceId, file != null && !file.isEmpty());
 
-        // Map để lưu tất cả lỗi theo từng dòng
-        Map<Integer, List<String>> errorsByRow = new LinkedHashMap<>();
+        List<ImportTeacherDTO> importList =
+                fileService.readExcelData(file, "Import Data", ImportTeacherDTO.class);
 
-        // Validate toàn bộ file trước
+        String firstError = null;
+
+        // Validate the entire file first
         for (int i = 0; i < importList.size(); i++) {
-            int rowNumber = i + 2; // +2 vì có header row và index bắt đầu từ 0
+            int row = i + 2; // +2 because of header row
             ImportTeacherDTO record = importList.get(i);
-            List<String> rowErrors = new ArrayList<>();
 
-            // Kiểm tra Email
+            // Email
             if (record.getEmail() == null || record.getEmail().trim().isEmpty()) {
-                rowErrors.add("Email không được để trống");
-            } else if (!Pattern.matches(Const.VALIDATE_INPUT.regexEmail, record.getEmail())) {
-                rowErrors.add("Email không đúng định dạng: " + record.getEmail());
+                firstError = String.format(Const.IMPORT_TEACHER.ROW_EMAIL_REQUIRED, row);
+                break;
+            }
+            if (!Pattern.matches(Const.VALIDATE_INPUT.regexEmail, record.getEmail())) {
+                firstError = String.format(Const.IMPORT_TEACHER.ROW_INVALID_EMAIL, row, record.getEmail());
+                break;
             }
 
-            // Kiểm tra First Name
+            // Full Name
             if (record.getFullName() == null || record.getFullName().trim().isEmpty()) {
-                rowErrors.add("First Name không được để trống");
+                firstError = String.format(Const.IMPORT_TEACHER.ROW_FULL_NAME_REQUIRED, row);
+                break;
             }
 
-            // Kiểm tra Role Name
+            // Role Name
             if (record.getRoleName() == null || record.getRoleName().trim().isEmpty()) {
-                rowErrors.add("Role Name không được để trống");
-            } else if (!EnumUtil.isAllowedEnumValue(RoleName.class, record.getRoleName(),
+                firstError = String.format(Const.IMPORT_TEACHER.ROW_ROLE_NAME_REQUIRED, row);
+                break;
+            }
+
+            if (!EnumUtil.isAllowedEnumValue(RoleName.class, record.getRoleName(),
                     Set.of(RoleName.TEACHER, RoleName.TEACHING_ASSISTANT))) {
-                rowErrors.add("Role Name không hợp lệ: " + record.getRoleName() +
-                        ". Chỉ chấp nhận: TEACHER, TEACHING_ASSISTANT");
+                firstError = String.format(Const.IMPORT_TEACHER.ROW_INVALID_ROLE, row, record.getRoleName());
+                break;
             }
 
-            // Kiểm tra Phone Number (tùy chọn nhưng phải đúng format nếu có)
-            if (record.getPhoneNumber() != null && !record.getPhoneNumber().trim().isEmpty()) {
-                if (!DataUtil.isValidPhoneNumber(record.getPhoneNumber())) {
-                    rowErrors.add("Số điện thoại không đúng định dạng: " + record.getPhoneNumber());
-                }
+            // Phone Number (optional)
+            if (record.getPhoneNumber() != null &&
+                    !record.getPhoneNumber().trim().isEmpty() &&
+                    !DataUtil.isValidPhoneNumber(record.getPhoneNumber())) {
+
+                firstError = String.format(Const.IMPORT_TEACHER.ROW_INVALID_PHONE, row, record.getPhoneNumber());
+                break;
             }
 
-            // Kiểm tra Gender (tùy chọn nhưng phải đúng format nếu có)
-            if (record.getGender() != null && !record.getGender().trim().isEmpty()) {
-                if (!EnumUtil.isValidEnum(Gender.class, record.getGender())) {
-                    rowErrors.add("Giới tính không hợp lệ: " + record.getGender());
-                }
-            }
+            // Gender (optional)
+            if (record.getGender() != null &&
+                    !record.getGender().trim().isEmpty() &&
+                    !EnumUtil.isValidEnum(Gender.class, record.getGender())) {
 
-            // Nếu có lỗi thì thêm vào map
-            if (!rowErrors.isEmpty()) {
-                errorsByRow.put(rowNumber, rowErrors);
+                firstError = String.format(Const.IMPORT_TEACHER.ROW_INVALID_GENDER, row, record.getGender());
+                break;
             }
         }
 
-        // Nếu có bất kỳ lỗi nào, throw exception với toàn bộ chi tiết
-        if (!errorsByRow.isEmpty()) {
-            String errorMessage = buildDetailedErrorMessage(errorsByRow, importList.size());
-            throw new ApiException(errorMessage, HttpStatus.BAD_REQUEST.value());
+        // If any error exists → stop import
+        if (firstError != null) {
+            log.error("[{}] traceId={} import validation failed: {}", method, traceId, firstError);
+            throw new ApiException(firstError, HttpStatus.BAD_REQUEST.value());
         }
 
-        // Nếu không có lỗi, tiến hành import
+        // No errors → proceed with import
         for (ImportTeacherDTO record : importList) {
+
             CreateUserRequest request = CreateUserRequest.builder()
                     .email(record.getEmail())
                     .fullName(record.getFullName())
@@ -750,32 +836,14 @@ public class UserServiceImpl implements UserService {
                     .phoneNumber(record.getPhoneNumber())
                     .gender(record.getGender())
                     .build();
+
             createTeacher(request);
         }
+
+        long durationMs = (System.nanoTime() - startNs) / 1_000_000;
+        log.info("[{}] exit traceId={} importedRows={} durationMs={}", method, traceId, importList.size(), durationMs);
     }
 
-    /**
-     * Xây dựng thông báo lỗi chi tiết cho toàn bộ file
-     */
-    private String buildDetailedErrorMessage(Map<Integer, List<String>> errorsByRow, int totalRows) {
-        StringBuilder message = new StringBuilder();
-        message.append("❌ Import thất bại! Phát hiện ").append(errorsByRow.size())
-                .append(" dòng lỗi trong tổng số ").append(totalRows).append(" dòng dữ liệu:\n\n");
-
-        for (Map.Entry<Integer, List<String>> entry : errorsByRow.entrySet()) {
-            int rowNumber = entry.getKey();
-            List<String> errors = entry.getValue();
-
-            message.append("📍 Dòng ").append(rowNumber).append(":\n");
-            for (String error : errors) {
-                message.append("   • ").append(error).append("\n");
-            }
-            message.append("\n");
-        }
-
-        message.append("⚠️ Vui lòng sửa các lỗi trên và thử lại!");
-        return message.toString();
-    }
 
     @Override
     public byte[] generateStudentImportTemplate() {
@@ -1286,7 +1354,7 @@ public class UserServiceImpl implements UserService {
         // Validate tất cả phải là ACTIVE hoặc INACTIVE
         List<User> pendingUsers = users.stream()
                 .filter(u -> u.getStatus() == UserStatus.PENDING)
-                .collect(Collectors.toList());
+                .toList();
 
         if (!pendingUsers.isEmpty()) {
             String pendingIds = pendingUsers.stream()
@@ -1319,7 +1387,7 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public byte[] validateStudentImportFile(MultipartFile file) {
+    public byte[] downloadStudentValidationFile(MultipartFile file) {
         // Đọc và validate file
         List<ImportStudentDTO> importList = fileService.readExcelData(
                 file, "Import Data", ImportStudentDTO.class
@@ -1358,7 +1426,7 @@ public class UserServiceImpl implements UserService {
                 if (record.getGender() != null && !EnumUtil.isValidEnum(Gender.class, record.getGender())) {
                     errors.append("• Gender không hợp lệ\n");
                 }
-                if (record.getParentEmail() != null && !record.getParentEmail().isEmpty() &&
+                if (record.getParentEmail() != null && record.getParentEmail().isEmpty() &&
                         !Pattern.matches(Const.VALIDATE_INPUT.regexEmail, record.getParentEmail())) {
                     errors.append("• Parent Email không hợp lệ\n");
                 }
@@ -1397,7 +1465,7 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public byte[] validateTeacherImportFile(MultipartFile file) {
+    public byte[] downloadTeacherValidationFile(MultipartFile file) {
         // Tương tự như student, nhưng dùng ImportTeacherDTO
         List<ImportTeacherDTO> importList = fileService.readExcelData(
                 file, "Import Data", ImportTeacherDTO.class
@@ -1475,3 +1543,4 @@ public class UserServiceImpl implements UserService {
         );
     }
 }
+
